--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
       href="/assets/images/favicon.ico"
       type="image/x-icon"
     />
+    <link rel="stylesheet" href="/css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game Of Life</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Game Of Life</h1>
+  </body>
 </html>
