--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game Of Life</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Game Of Life</h1>
+  </body>
 </html>
