--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
       href="/assets/images/favicon.ico"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/public/index.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game Of Life</title>
   </head>
