Added main sectin with canvas element and 2d context with basics styling

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,20 @@
       href="/assets/images/favicon.ico"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="/public/index.html" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <script type="module" src="/index.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game Of Life</title>
   </head>
   <body>
-    <h1>Game Of Life</h1>
+    <header>
+      <h1>Game Of Life</h1>
+    </header>
+
+    <main>
+      <section class="canvas">
+        <canvas id="grid" width="600" height="600"></canvas>
+      </section>
+    </main>
   </body>
 </html>
