--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     />
     <link rel="stylesheet" href="/public/index.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="/js/index.js" type="module"></script>
     <title>Game Of Life</title>
   </head>
   <body>
