--- a/site/public/index.html
+++ b/site/public/index.html
@@ -7,10 +7,10 @@
       href="/assets/images/favicon.ico"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="/css/style.css" />
-    <script type="module" src="/index.js" defer></script>
+    <link rel="stylesheet" href="css/style.css" />
+    <script type="module" src="js/index.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="/js/index.js" type="module"></script>
+
     <title>Game Of Life</title>
   </head>
   <body>
