--- a/site/public/index.html
+++ b/site/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link
       rel="shortcut icon"
-      href="/assets/images/favicon.ico"
+      href="assets/images/favicon.ico"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="css/style.css" />
