--- a/site/public/index.html
+++ b/site/public/index.html
@@ -8,7 +8,7 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <script type="module" src="js/index.js" defer></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Game Of Life</title>
@@ -24,4 +24,5 @@
       </section>
     </main>
   </body>
+  <script type="module" src="js/index.js"></script>
 </html>
